--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Conditional Statements in C.exe
 Printing Pattern Using Loops.exe
 Calculate the Nth term.exe
 Array Reversal.exe
+Printing Tokens.exe
